<resources>
    <string name="app_name">PrayerPal</string>
    <string name="prayers_nav_title">Prayer</string>
    <string name="qibla_nav_title">Qibla</string>
    <string name="tracker_nav_title">Tracker</string>
    <string name="dua_nav_title">Dua\'s</string>

<!--    Map Activity Layout-->
    <string name="ma_back_btn_txt">Back</string>
    <string name="ma_sv_hint">Search for your location…</string>
    <string name="ma_current_location_txt">Use my current location</string>

<!--    Qibla Frag Layout-->
    <string name="qf_location_txt">Location</string>
    <string name="qf_facing_qibla">You\'re facing the <b>Qibla</b></string>
    <string name="qf_calibrate_txt">Calibrate</string>
    <string name="qf_turn_left_txt">Turn Left</string>
    <string name="qf_turn_right_txt">Turn Right</string>

<!--    Calibrate Popup Layout-->
    <string name="popup_title">Wave the device in a figure 8 motion to calibrate</string>
    <string name="popup_btn_txt">Done</string>

<!--    Tracker Frag Layout-->
    <string name="tf_fajr_text">Fajr</string>
    <string name="tf_dhuhr_text">Dhuhr</string>
    <string name="tf_asr_text">Asr</string>
    <string name="tf_maghrib_text">Maghrib</string>
    <string name="tf_isha_text">Isha</string>

<!--    Dua Frag Layout-->
    <string name="df_sv_hint">Search by title…</string>

<!--    Dua Detail Frag Layout-->
    <string name="ddf_back_btn_txt">Back</string>
    <string name="ddf_arabic_tv">Arabic</string>
    <string name="ddf_transliteration_tv">Transliteration</string>
    <string name="ddf_meaning_tv">Meaning</string>

<!--    Error Frag Layout-->
    <string name="ef_return_btn_txt">Return back to safety</string>
</resources>