<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.TrackerFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/tf_constraint_padding">

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tracker_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:textSize="@dimen/txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendar" />

        <CheckBox
            android:id="@+id/fajr_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tf_margin_top"
            android:text="@string/tf_fajr_text"
            android:textSize="@dimen/txt_size"
            android:textColor="@color/almost_black"
            android:background="@drawable/listview_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tracker_date" />

        <CheckBox
            android:id="@+id/dhuhr_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tf_margin_top"
            android:text="@string/tf_dhuhr_text"
            android:textSize="@dimen/txt_size"
            android:textColor="@color/almost_black"
            android:background="@drawable/listview_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fajr_checkbox" />

        <CheckBox
            android:id="@+id/asr_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tf_margin_top"
            android:text="@string/tf_asr_text"
            android:textSize="@dimen/txt_size"
            android:textColor="@color/almost_black"
            android:background="@drawable/listview_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dhuhr_checkbox" />

        <CheckBox
            android:id="@+id/maghrib_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tf_margin_top"
            android:text="@string/tf_maghrib_text"
            android:textSize="@dimen/txt_size"
            android:textColor="@color/almost_black"
            android:background="@drawable/listview_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/asr_checkbox" />

        <CheckBox
            android:id="@+id/isha_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tf_margin_top"
            android:layout_marginBottom="@dimen/tf_margin_bottom"
            android:background="@drawable/listview_corners"
            android:text="@string/tf_isha_text"
            android:textColor="@color/almost_black"
            android:textSize="@dimen/txt_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maghrib_checkbox" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>