<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MapsActivity" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ma_back_btn_margin"
        android:layout_marginTop="@dimen/ma_back_btn_margin"
        android:background="@drawable/back_btn_corners"
        android:text="@string/ma_back_btn_txt"
        android:textColor="@color/chinese_white"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_arrow_back"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/sv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/ma_sv_margin_top"
        android:background="@drawable/search_background"
        android:iconifiedByDefault="false"
        android:queryHint="@string/ma_sv_hint"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/back_button" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ma_error_tv_margin_top"
        android:background="@drawable/error_text_corners"
        android:textColor="@color/error"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/sv_location" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/current_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ma_current_location_margin"
        android:background="@drawable/current_location_corners"
        android:text="@string/ma_current_location_txt"
        android:textAllCaps="false"
        android:textColor="@color/almost_black"
        android:drawableStart="@drawable/ic_gps"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
